--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -6,6 +6,7 @@
   "signInWith": "entrar com o",
   "notify": "notificar",
   "everybody": "todos",
+  "notifyAgainAlert": "aguarde um pouco antes de notificar novamente",
   "friendsRequests": "solicitações de amizade",
   "support": "suporte",
   "logout": "sair",
