--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -7,6 +7,7 @@
   "notify": "notificar",
   "everybody": "todos",
   "notifyAgainAlert": "aguarde um pouco antes de notificar novamente",
+  "successfulNotifyAlert": "todos os seus amigos foram notificados",
   "friendsRequests": "solicitações de amizade",
   "support": "suporte",
   "logout": "sair",
