Add copy username button

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -49,5 +49,7 @@
   "deleteFriendRequest": "delete friend request?",
   "cancel": "cancel",
   "delete": "delete",
-  "deletingRequest": "deleting request..."
+  "deletingRequest": "deleting request...",
+  "copyUsername": "copy username",
+  "usernameCopied": "username copied to clipboard"
 }
