--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -48,5 +48,8 @@
   "delete": "excluir",
   "deletingRequest": "excluindo solicitção...",
   "copyUsername": "copiar nome de usuário",
-  "usernameCopied": "nome de usuário copiado para a área de transferência"
+  "usernameCopied": "nome de usuário copiado para a área de transferência",
+  "settings": "configurações",
+  "language": "idioma",
+  "languageHint": "escolha o idioma para notificações recebidas"
 }
