Add a drawer and welcome screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -55,5 +55,6 @@
   "settings": "settings",
   "language": "language",
   "languageHint": "set the language for incoming notifications",
-  "notifying": "notifying"
+  "notifying": "notifying",
+  "howToUse": "how to use?"
 }
