Lock drinking options for non premium users

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,5 +56,6 @@
   "language": "language",
   "languageHint": "set the language for incoming notifications",
   "notifying": "notifying",
-  "howToUse": "how to use?"
+  "howToUse": "how to use?",
+  "premium": "premium"
 }
